Support Java 11 and Java 25 Arena VFS variants with bounded JDBC load